update to JDK 17 and all dependencies + added Avro IDL + removed Cap'n'proto + cleanup